--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,26 @@
-/* Resetting default browser styling */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
+* {
+  margin: 0; 
   padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
+  box-sizing: border-box;
+  }
+  body {
+      font-family: 'Arial', sans-serif;
+      line-height: 1.6;
+      padding: 20px;
+      background-color: #f4f4f4;
+      }
+      header {
+      text-align: center;
+      margin-bottom: 20px;
+      }
+      .profile-img {
+      width: 200px;
+      height: auto;
+      border-radius: 50%;
+      }
+      footer {
+      text-align: center;
+      }
+      a:hover {
+          text-decoration: underline;
+      }
