--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,25 @@
 * {
   margin: 0; 
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: border-box;  
+  }
+  nav {
+    display: flex;
+    justify-content: space-around; 
+    width: 100%; 
   }
   body {
       font-family: 'Arial', sans-serif;
       line-height: 1.6;
       padding: 20px;
+      text-align: center;
       background-color: #f4f4f4;
       }
       header {
-      text-align: center;
-      margin-bottom: 20px;
+      background-color: #fff; 
+      text-align: center;  
+      width: 100%;
+      padding: 20px;
       }
       .profile-img {
       width: 200px;
