--- a/styles.css
+++ b/styles.css
@@ -30,8 +30,22 @@
         background-color: #fff; 
         padding: 20px; 
       }
-      a:hover {
-        text-decoration: underline;
+      #skills {
+        display: flex;
+        flex-wrap: wrap;
+      }
+      #skills ul {
+        list-style: none;
+        padding: 1;
+        display: flex;
+        flex-wrap: wrap;
+      }
+      #skills li {
+        flex: 1;
+        padding: 10px;
+        border: 2px solid #6b5f5f; 
+        margin: 50px;
+        text-align: center;
       }
       footer {
         text-align: center;
